--- a/requirements.txt
+++ b/requirements.txt
@@ -88,6 +88,7 @@ python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
+pywin==304
 pywinpty==2.0.10
 pyzmq==25.0.2
 qtconsole==5.4.1
