--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
 myfile filter=lfs diff=lfs merge=lfs -text
 <similarity.pkl> filter=lfs diff=lfs merge=lfs -text
+similarity.pkl filter=lfs diff=lfs merge=lfs -text
