--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,1 @@
-*.psd filter=lfs diff=lfs merge=lfs -text
-*.csv filter=lfs diff=lfs merge=lfs -text
-myfile filter=lfs diff=lfs merge=lfs -text
-<similarity.pkl> filter=lfs diff=lfs merge=lfs -text
-similarity.pkl filter=lfs diff=lfs merge=lfs -text
+*.pkl filter=lfs diff=lfs merge=lfs -text
